# WidowX-reacher

./: .gitignore  LICENSE  README.md  environment.yml  environment_no_sb.yml  environment_sb.yml  launch_kay.slurm  test_gym_replab.py  test_widowx_gym.py
conda_envs/: environment_SB_G5.yml  environment_rlkit.yml  environment_sb_kay.yml
enjoy_scripts/: save_clean_pickle.py  sim_goal_conditioned_policy.py  sim_policy.py  simple_sim_policy.py
environment/: environment_extracted_from_docker.yml  linux-gpu-env.yml
examples/: her_td3_gym_fetch_reach.py  td3.py  test_rlkit.py
gym_environments/: setup.py
rlkit_old/: launch_kay.slurm  setup.py
scripts/: sim_policy.py
stable-baselines/: 2_train.py  3_enjoy.py  4_optimise_hyperparameters.sh  5_run_experiments.sh  6_get_results_exp.sh  LICENSE  clean_opti_params.py  launch_kay.slurm  plot_1seed.py  plot_experiment.py  plot_experiment_comparison.py  plot_opti_report.py
stable-baselines_bck/: 2_train.py  3_enjoy.py  5_run_experiments.sh  6_get_results_exp.sh  launch_kay.slurm  plot_experiment_comparison_2M_tuned.py  plot_opti_report.py
stable-baselines_zoo/: 2_train.py  3_enjoy.py  4_optimise_hyperparameters.sh  5_run_experiments.sh  6_get_results_exp.sh  7_enjoy_random_policy.py  7_run_random_policy.py  clean_random_training.py  (+12 more)
widowx_ros_packages/widowx_arm/widowx_arm_bringup/: CMakeLists.txt  package.xml
widowx_ros_packages/widowx_arm/widowx_arm_bringup/config/: widowx_arm.yaml  widowx_arm_gripper.yaml
widowx_ros_packages/widowx_arm/widowx_arm_bringup/launch/: arm.launch  arm_moveit.launch  sr300.launch
(+6908 files in other folders)
