<?xml version="1.0"?>
<package>
  <name>widowx_arm_bringup</name>
  <version>0.1.0</version>
  <description>The widowx_arm_bringup package</description>
  <maintainer email="renee@interbotix.com">Renee Love</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>widowx_arm_description</run_depend>
  <run_depend>widowx_arm_ikfast_plugin</run_depend>
  <run_depend>widowx_arm_moveit_config</run_depend>
</package>
